@@ -144,5 +144,16 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
+// apply --enable-preview
+//tasks.withType(JavaCompile).configureEach {
+//    options.compilerArgs << '--enable-preview'
+//}
+//tasks.withType(Test).configureEach {
+//    jvmArgs '--enable-preview'
+//}
+//tasks.withType(JavaExec).configureEach {
+//    jvmArgs '--enable-preview'
+//}
+
 apply from: "$project.rootDir/native.gradle"
 tasks.named('test', setNativeLibPath)
